src/infra/config/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kube-gateway
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy
  listeners:
    - name: https-website
      port: 443
      protocol: HTTPS
      hostname: lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: website-tls

    - name: https-flux
      port: 443
      protocol: HTTPS
      hostname: cloud.lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: flux-tls

    - name: https-id
      port: 443
      protocol: HTTPS
      hostname: id.lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: authelia-tls

    - name: https-git
      port: 443
      protocol: HTTPS
      hostname: git.lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: forgejo-tls

    - name: https-pass
      port: 443
      protocol: HTTPS
      hostname: pass.lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: vaultwarden-tls
